--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-selam
+<!DOCTYPE html>
+<html> 
+
+    <head>
+        <title>BTE311 Lab Çalışmaları</title>
+    </head>
+
+    <body>
+
+        <h1>Hacettepe Üniversitesi BÖTE Bölümü Benginur Korkmaz Atölye Çalışmaları</h1>
+
+        <ol type="1">
+
+            <li>Hafta 2</li>
+
+            <ul style="list-style-type:circle;">
+                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/Masal.html">Masal</a></li> 
+            </ul>
+
+            <li>Hafta 3</li>
+
+            <ul style="list-style-type: circle;">
+                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/GitHub/BenginurKorkmaz_BTE311/BTE311_Lab_Calismalari.html">Atölye Çalışmaları</a></li>
+                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/GitHub/BenginurKorkmaz_BTE311/tablo2.html">tablo2.html</a></li>
+                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/tablo3.html">tablo3.html</a></li> 
+            </ul>
+        </ol>
+
+    </body>
