--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <li>Hafta 2</li>
 
             <ul style="list-style-type:circle;">
-                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/GitHub/masal.html">Masal</a></li> 
+                <li><a href="masal.html">Masal</a></li> 
             </ul>
 
             <li>Hafta 3</li>
 
             <ul style="list-style-type: circle;">
-                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/GitHub/tablo2.html">tablo2.html</a></li>
-                <li><a href="file:///C:/Users/bengi/OneDrive/Belgeler/GitHub/tablo3.html">tablo3.html</a></li> 
+                <li><a href="tablo2.html">tablo2.html</a></li>
+                <li><a href="tablo3.html">tablo3.html</a></li> 
             </ul>
         </ol>
 
