--- a/form1.html
+++ b/form1.html
@@ -94,7 +94,7 @@
 
                      <tr>
                         <td>Adres: </td>
-                        <td><input type="text" name="adres" required placeholder="Mahalle,Cadde,Site"></td>
+                        <td><input type="text" name="adres" maxlength="50" required placeholder="Mahalle,Cadde,Site"></td>
                      </tr>
 
                 </table>
