--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
             <ul style="list-style-type: circle;">
                 <li><a href="tablo2.html">tablo2.html</a></li>
-                <li><a href="tablo3.html">tablo3.html</a></li> 
+                <li><a href="tablo3.html">tablo3.html</a></li>
+                <li><a href="dersprogrami.html">dersprogrami.html</a></li>
             </ul>
 
             <li>Hafta 4</li>
