--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 <li><a href="form1.html">form1.html</a></li>
                 <li><a href="test1.html">test1.html</a></li>
             </ul>
+
+            <li>Hafta 5</li>
+
+            <ul style="list-style-type: circle;">
+                <li><a href="inlinecssdersprogrami.html">inlinecssdersprogrami.html</a></li>
+            </ul>
             
         </ol>
 
