--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             <ul style="list-style-type: circle;">
                 <li><a href="inlinecssdersprogrami.html">inlinecssdersprogrami.html</a></li>
+                <li><a href="internalcssdersprogrami.html">inlinecssdersprogrami.html</a></li>
             </ul>
             
         </ol>
