--- a/inlinecssdersprogrami.html
+++ b/inlinecssdersprogrami.html
@@ -7,7 +7,7 @@
 
     <body>
 
-        <table border="1" style="text-align: center">
+        <table border="1" style="text-align: center" width: 2000px; height: 500px;>
 
             <thead>
                 <caption><b>DERS PROGRAMI</b></caption>
