--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <ul style="list-style-type: circle;">
                 <li><a href="inlinecssdersprogrami.html">inlinecssdersprogrami.html</a></li>
                 <li><a href="internalcssdersprogrami.html">internalcssdersprogrami.html</a></li>
+                <li><a href="extarnalcssdersprogrami.html">externalcssdersprogrami.html</a></li>
             </ul>
             
         </ol>
