--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                 <li><a href="test1.html">test1.html</a></li>
             </ul>
 
-            <li>Hafta 5</li>
+            <li>Hafta 5-6</li>
 
             <ul style="list-style-type: circle;">
                 <li><a href="inlinecssdersprogrami.html">inlinecssdersprogrami.html</a></li>
                 <li><a href="internalcssdersprogrami.html">internalcssdersprogrami.html</a></li>
                 <li><a href="extarnalcssdersprogrami.html">externalcssdersprogrami.html</a></li>
+                <li><a href="daireler.html">daireler.html</a></li>
             </ul>
             
         </ol>
