--- a/index.html
+++ b/index.html
@@ -20,25 +20,31 @@
             <li>Hafta 3</li>
 
             <ul style="list-style-type: circle;">
-                <li><a href="tablo2.html">tablo2.html</a></li>
-                <li><a href="tablo3.html">tablo3.html</a></li>
-                <li><a href="dersprogrami.html">dersprogrami.html</a></li>
+                <li><a href="tablo2.html">Tablo 2</a></li>
+                <li><a href="tablo3.html">Tablo 3</a></li>
+                <li><a href="dersprogrami.html">Ders Programı </a></li>
             </ul>
 
             <li>Hafta 4</li>
 
             <ul style="list-style-type: circle;">
-                <li><a href="form1.html">form1.html</a></li>
-                <li><a href="test1.html">test1.html</a></li>
+                <li><a href="form1.html">Form1</a></li>
+                <li><a href="test1.html">Test 1</a></li>
             </ul>
 
             <li>Hafta 5-6</li>
 
             <ul style="list-style-type: circle;">
-                <li><a href="inlinecssdersprogrami.html">inlinecssdersprogrami.html</a></li>
-                <li><a href="internalcssdersprogrami.html">internalcssdersprogrami.html</a></li>
-                <li><a href="extarnalcssdersprogrami.html">externalcssdersprogrami.html</a></li>
-                <li><a href="daireler.html">daireler.html</a></li>
+                <li><a href="inlinecssdersprogrami.html">Inline Css Ders Programı</a></li>
+                <li><a href="internalcssdersprogrami.html">Internal Css Ders Programı</a></li>
+                <li><a href="extarnalcssdersprogrami.html">External Css Ders Programı</a></li>
+                <li><a href="daireler.html">Daireler</a></li>
+            </ul>
+
+            <li>Hafta 7</li>
+
+            <ul style="list-style-type: circle;">
+                <li><a href="gridlayout.html">Grid Layout</a></li>
             </ul>
             
         </ol>
