--- a/gridlayout.html
+++ b/gridlayout.html
@@ -7,6 +7,8 @@
 
         <style>
 
+             @media screen and (max-width: 600px) { .container>div { width: 90%; } }
+
             .flex-container {   display: flex; 
                                 flex-direction: row;
                                 row-gap: 5px;
