--- a/extarnalcssdersprogrami.html
+++ b/extarnalcssdersprogrami.html
@@ -2,7 +2,7 @@
 <html> 
 
     <head>
-        <title>Tablo 2</title>
+        <title>External Css Ders Programı</title>
 
         <link rel="stylesheet" href="externalcssdersprogrami.css">
 
