--- a/index.html
+++ b/index.html
@@ -2,57 +2,65 @@
 <html> 
 
     <head>
-        <title>BTE311 Lab Çalışmaları</title>
+
+        <title>Benginur Korkmaz</title>
+
+        <style>
+
+            body {background-image: url(https://i.pinimg.com/564x/6e/d2/2c/6ed22c5b02c607fc07d6f83e4902ccb4.jpg);
+                  background-size: cover;}
+
+            h1 { background-color: lightskyblue;
+                 color: white;
+                 display: inline-block;
+                 width: 800px;
+                 margin-left: 350px;
+                 padding: 50px;
+                 border-radius: 25px;
+                 text-align: center;
+                 font-family: 'Times New Roman', Times, serif; }
+
+            ul {margin-top: 20px;
+                margin-left: 650px;
+                list-style: none;
+                width: 40%; }
+
+            ul li {width: 200px;
+                   padding: 15px;
+                   border-radius: 15px;
+                   background-color: plum;
+                   margin-left: -30px; }
+
+            ul li:hover {background-color: black;
+                         transition: 0.5s; } 
+
+            ul li a {text-decoration: none;
+                     color: white;
+                     font-family: 'Times New Roman', Times, serif;
+                     font-weight: bold;}
+            
+        </style>
+
     </head>
 
     <body>
 
-        <h1>Hacettepe Üniversitesi BÖTE Bölümü Benginur Korkmaz Atölye Çalışmaları</h1>
+        <h1>Hacettepe Üniversitesi BÖTE Bölümü<hr>Benginur Korkmaz Atölye Çalışmaları</h1>
 
-        <ol type="1">
+        <ul>
+            <li><a href="masal.html">Masal</a></li>
+            <li><a href="tablo2.html">Tablo 2</a></li>
+            <li><a href="tablo3.html">Tablo 3</a></li>
+            <li><a href="dersprogrami.html">Ders Programı </a></li>
+            <li><a href="form1.html">Form1</a></li>
+            <li><a href="test1.html">Test 1</a></li>
+            <li><a href="inlinecssdersprogrami.html">Inline Css Ders Programı</a></li>
+            <li><a href="internalcssdersprogrami.html">Internal Css Ders Programı</a></li>
+            <li><a href="extarnalcssdersprogrami.html">External Css Ders Programı</a></li>
+            <li><a href="daireler.html">Daireler</a></li>
+            <li><a href="gridlayout.html">Grid Layout</a></li>
 
-            <li>Hafta 2</li>
-
-            <ul style="list-style-type:circle;">
-                <li><a href="masal.html">Masal</a></li> 
-            </ul>
-            <br>
-
-            <li>Hafta 3</li>
-
-            <ul style="list-style-type: circle;">
-                <li><a href="tablo2.html">Tablo 2</a></li>
-                <li><a href="tablo3.html">Tablo 3</a></li>
-                <li><a href="dersprogrami.html">Ders Programı </a></li>
-            </ul>
-            <br>
-
-            <li>Hafta 4</li>
-
-            <ul style="list-style-type: circle;">
-                <li><a href="form1.html">Form1</a></li>
-                <li><a href="test1.html">Test 1</a></li>
-            </ul>
-            <br>
-
-            <li>Hafta 5-6</li>
-
-            <ul style="list-style-type: circle;">
-                <li><a href="inlinecssdersprogrami.html">Inline Css Ders Programı</a></li>
-                <li><a href="internalcssdersprogrami.html">Internal Css Ders Programı</a></li>
-                <li><a href="extarnalcssdersprogrami.html">External Css Ders Programı</a></li>
-                <li><a href="daireler.html">Daireler</a></li>
-            </ul>
-            <br>
-
-            <li>Hafta 7</li>
-
-            <ul style="list-style-type: circle;">
-                <li><a href="gridlayout.html">Grid Layout</a></li>
-            </ul>
-            <br>
-            
-        </ol>
+        </ul>
 
     </body>
 
