--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <li><a href="extarnalcssdersprogrami.html">External Css Ders Programı</a></li>
             <li><a href="daireler.html">Daireler</a></li>
             <li><a href="gridlayout.html">Grid Layout</a></li>
+            <li><a href="animasyon.html">Animasyon</a></li>
 
         </ul>
 
