--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="daireler.html">Daireler</a></li>
             <li><a href="gridlayout.html">Grid Layout</a></li>
             <li><a href="animasyon.html">Animasyon</a></li>
+            <li><a href="card.html">Kartlar</a></li>
 
         </ul>
 
