--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li><a href="gridlayout.html">Grid Layout</a></li>
             <li><a href="animasyon.html">Animasyon</a></li>
             <li><a href="card.html">Kartlar</a></li>
+            <li><a href="sayfayenileme.html">Sayfa Yenileme</a></li>
 
         </ul>
 
