--- a/sayfayenileme.html
+++ b/sayfayenileme.html
@@ -30,7 +30,7 @@
             window.addEventListener('load', function() {
             var body = document.querySelector('body');
             var colors = ['red', 'blue', 'green', 'yellow', 'black', 'pink', 'orange', 'purple', 'darkgrey']; 
-            var image1 = ['resim1.jpg', 'resim2.jpg', 'resim3.jpg', 'resim4.jpg', 'resim5.jpg', 'resim6.jpg', 'resim7.jpg', 'resim8.jpg', 'resim9.jpg', 'resim10.jpg'];
+            var image1 = ['resim1.jpg', 'resim2.jpg', 'resim3.jpg', 'resim4.jpg', 'resim5.jpg', 'resim6.jpg', 'resim7jpg.jpg', 'resim8.jpg', 'resim9.jpg', 'resim10.jpg'];
             var randomColor = colors[Math.floor(Math.random() * colors.length)]; 
             var randomimage = image1[Math.floor(Math.random() * image1.length)]; 
             body.style.backgroundColor = randomColor;
