--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><a href="animasyon.html">Animasyon</a></li>
             <li><a href="card.html">Kartlar</a></li>
             <li><a href="sayfayenileme.html">Sayfa Yenileme</a></li>
+            <li><a href="index.php">PHP Tek Sayılar</a></li>
 
         </ul>
 
