--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li><a href="animasyon.html">Animasyon</a></li>
             <li><a href="card.html">Kartlar</a></li>
             <li><a href="sayfayenileme.html">Sayfa Yenileme</a></li>
+            <li><a href="canvasilekarecizimi.html">Canvas İle Kare Çizimi</a></li>
             <li><a href="index.php">PHP Tek Sayılar</a></li>
 
         </ul>
