--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
             body {background-image: url(https://i.pinimg.com/564x/6e/d2/2c/6ed22c5b02c607fc07d6f83e4902ccb4.jpg);
                   background-size: cover;}
 
+            .popup {
+                      position: fixed;
+                      top: 50%;
+                      left: 50%;
+                      transform: translate(-50%, -50%);
+                      width: 300px;
+                      height: 200px;
+                      background-color: white;
+                      border: 1px solid black;
+                      opacity: 0;
+                      visibility: hidden;
+                      animation: fade 0.5s linear 5s forwards;}
+
+            @keyframes fade {
+              0% { opacity: 0; visibility: hidden; }
+              100% { opacity: 1; visibility: visible; }}
+
+
             h1 { background-color: lightskyblue;
                  color: white;
                  display: inline-block;
@@ -48,6 +66,11 @@
     </head>
 
     <body>
+
+        <div class="popup">
+          <h1>Duyuru Penceresi</h1>
+          <p>Sayfama Hoşgeldiniiiiiiizzzzz.</p>
+        </div>
 
         <h1>Hacettepe Üniversitesi BÖTE Bölümü<hr>Benginur Korkmaz Atölye Çalışmaları</h1>
 
